--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "middleware.js", "src/app/(auth)/sign-in/[[...sign-in]]/page.jsx", "src/app/dashboard/create-new/page.jsx", "src/app/page.jsx", "src/app/layout.jsx"],
   "exclude": ["node_modules"]
 }
